# fovia-mac-app

./: .gitignore  FaceFlow  README.md  build_dmg.sh  dev.sh  download_models.sh  generate_keys.py  supabase_setup.sql
.github/: copilot-instructions.md
.github/workflows/: ci.yml
cloud-api/: .gitignore  README.md
cloud-api/app/core/: config.py
cloud-api/app/routers/: faces.py
cloud-api/app/services/: face_detection.py
docs/: APPLE_SIGNING_GUIDE.md  INSTALL.md  Инструкция по установке.txt
faceflow-client/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json
faceflow-client/fovia-client/: package.json
faceflow-client/fovia-client/src/: App.tsx
faceflow-client/fovia-client/src-tauri/: Cargo.toml  tauri.conf.json
faceflow-client/fovia-client/src/components/: DropZone.tsx
faceflow-client/src/: App.tsx  index.css  main.tsx
faceflow-client/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
faceflow-client/src-tauri/capabilities/: default.json
faceflow-client/src-tauri/icons/: README_INSTALL.rtf  icon.icns
faceflow-client/src-tauri/src/: lib.rs  menu.rs
faceflow-client/src-tauri/src/commands/: scan.rs
faceflow-client/src-tauri/src/services/: activation.rs  clustering.rs  database.rs  extractor.rs  inference.rs  mod.rs  secrets.rs  xmp.rs
faceflow-client/src/components/: ActivationView.tsx  AiAnalysisDialog.tsx  AiTaskPicker.tsx  BottomActionBar.tsx  ColorLabelPicker.tsx  CompareView.tsx  DropZone.tsx  ExifPanel.tsx  ExportDialog.tsx  FaceFlowLogo.tsx  FaceSidebar.tsx  GalleryView.tsx  HelpDialog.tsx  MergeSuggestionsDialog.tsx  PhotoGrid.tsx  PhotoViewer.tsx  ProgressView.tsx  RestartDialog.tsx  ResumeDialog.tsx  ScanSummaryDialog.tsx  SettingsPanel.tsx  StarRating.tsx  Toolbar.tsx
faceflow-client/src/hooks/: useKeyboardShortcuts.ts  usePhotoMeta.ts
faceflow-client/src/i18n/: en.ts  index.tsx  ru.ts
faceflow-client/src/services/: aiService.ts  faceGrouping.ts
faceflow-client/src/types/: index.ts
fovia-client/: package-lock.json  package.json
fovia-client/src/: App.tsx  index.css
fovia-client/src-tauri/: Cargo.toml  tauri.conf.json
fovia-client/src-tauri/capabilities/: default.json
fovia-client/src-tauri/src/: lib.rs
fovia-client/src/components/: DropZone.tsx  FaceSidebar.tsx  FoviaLogo.tsx  GalleryView.tsx  PhotoGrid.tsx  ProgressView.tsx
fovia-client/src/types/: index.ts
scripts/: cleanup.sh  make_dmg_assets.py
supabase/.temp/: linked-project.json
supabase/functions/activate/: index.ts
(+4 files in other folders)
