[package]
name = "faceflow-app"
version = "0.1.0"
description = "FaceFlow - Face-based photo sorting for expedition photographers"
authors = ["FaceFlow Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["rt", "macros"] }
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
sysinfo = { version = "0.35", default-features = false, features = ["disk"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
kamadak-exif = "0.5"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
ndarray = "0.17"
rusqlite = { version = "0.31", features = ["bundled"] }
flate2 = "1"
tar = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
