[package]
name = "faceflow-app"
version = "0.1.0"
description = "FaceFlow - Face-based photo sorting for expedition photographers"
authors = ["FaceFlow Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
sysinfo = "0.35"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
